tests/NormalTests/paczka1/fuzzy1/88922475.err
Error in line 7: 8CD S294 9,7
Error in line 12: BbMG4rXo S561 73,7
Error in line 4: GoZH S429 69,7
Error in line 15: BbMG4rXo S210 24,8
Error in line 14: S210 S294 254,1
Error in line 30: S210 S561 58,1
